Removendo animação da imagem de fundo da tela de login e resgistro

--- a/src/componentes/autenticacao/modais/ModalVerifyCode.css
+++ b/src/componentes/autenticacao/modais/ModalVerifyCode.css
@@ -6,3 +6,7 @@
     background-color: transparent;
     color: black !important;
 }
+.container-modal{
+    width: 700px !important;
+    margin: auto !important;
+}
